# ellipse_detection

./: CMakeLists.txt
src/: contour_segmenter.cpp  contour_segmenter.hpp  detector.cpp  detector.hpp  ellipse_filter.cpp  ellipse_filter.hpp  main.cpp  types.hpp
